Get all cpvs
