# api/swagger/swagger.yaml
@@ -50,9 +50,7 @@ paths:
         "200":
           description: Success
           schema:
-            type: array
-            items:
-              $ref: "#/definitions/CpvResponse"
+            $ref: "#/definitions/CpvIndex"
         default:
           description: Error
           schema:
@@ -437,15 +435,28 @@ definitions:
       refreshToken:
         type: string
         description: Refresh token with long life
-
-  CpvResponse:
+  CpvIndex:
     type: object
+    properties:
+      cpvs:
+        type: array
+        items:
+          $ref: "#/definitions/Cpv"
+  Cpv:
     required:
       - code
+      - xName
+      - xNumberDigits
     properties:
       code:
         type: string
         description: CPV code
+      xName:
+        type: string
+        description: CPV name
+      xNumberDigits:
+        type: integer
+        description: Number of relevant digits in the CPV
   ErrorResponse:
     type: object
     required:
